Fix layout bug on posts with large numbers of coauthors.

--- a/www/css/style-rts.mac.css
+++ b/www/css/style-rts.mac.css
@@ -1733,7 +1733,6 @@ article {
 	display: inline-block;
 	margin-right: 1em;
 	font-size: 1.0625em;
-	white-space: nowrap;
 }
 .body-text {
 	overflow-wrap: break-word;
